--- a/src/index.html
+++ b/src/index.html
@@ -39,11 +39,11 @@
     <include src="./partials/advantages.html"></include>
     <include src="./partials/gallery.html"></include>
     <include src="./partials/reviews.html"></include>
-    <include src="./partials/contacts.html"></include>
+    <!-- <include src="./partials/contacts.html"></include>
     <include src="./partials/footer.html"></include>
     <include src="./partials/modal-contacts.html"></include>
     <include src="./partials/modal-contacts-se.html"></include>
-    <include src="./partials/modal-about.html"></include>
+    <include src="./partials/modal-about.html"></include> -->
 
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
     <script src="./index.js"></script>
